--- a/src/apps/copo_core/templates/copo/component_navbar.html
+++ b/src/apps/copo_core/templates/copo/component_navbar.html
@@ -2,7 +2,9 @@
 
 <div class="row" style="margin-bottom:40px;">
     <div class="col-sm-7 col-md-7 col-lg-9 copo-page-headers"></div>
-    <div class="col-sm-5 col-md-5 col-lg-3 copo-page-icons"></div>
+    <div class="col-sm-5 col-md-5 col-lg-3 copo-page-icons"
+        data-tour-id="profile_component_icon_navigation_pane">
+    </div>
 </div>
 <div class="tdt"></div>
 
