--- a/src/apps/copo_core/templates/copo/copo_group.html
+++ b/src/apps/copo_core/templates/copo/copo_group.html
@@ -276,7 +276,7 @@
 {% block help_section %}
     <ul class="nav nav-tabs copo-sidebar-tabs">
         <li class="active copo-sidebar-info"><a data-toggle="tab" href="#copo-sidebar-info"
-                data-copo-tour-id="page_alert_panel">Info</a></li>
+                data-tour-id="page_alert_panel">Info</a></li>
     </ul>
     <div class="tab-content"></div>
         <div id="copo-sidebar-info" class="tab-pane fade in active copo-sidebar-info">
