--- a/src/apps/copo_core/templates/copo/copo_submission.html
+++ b/src/apps/copo_core/templates/copo/copo_submission.html
@@ -82,8 +82,7 @@
     <hr/>
     <!-- submission table -->
     <h4 class="h4" id="wizard_submissions_label">Wizard Submissions</h4>
-    <div id="component_table_loader" class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"
-         data-copo-tour-id="submission_table"></div> <!-- div used by the quick tour agent -->
+    <div id="component_table_loader" class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"></div>
     <div id="cover-spin-bundle"></div>
 
     <div class="table-parent-div">
