--- a/src/apps/copo_core/templates/copo/metadata_templates.html
+++ b/src/apps/copo_core/templates/copo/metadata_templates.html
@@ -66,8 +66,7 @@
     </div>
 
     <!-- publication_table -->
-    <div id="component_table_loader" class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"
-         data-copo-tour-id="metadata_template_table"></div> <!-- div used by the quick tour agent -->
+    <div id="component_table_loader" class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"></div>
     <div class="table-parent-div">
         <table id="metadata_template_table" class="ui celled table hover copo-noborders-table"
                cellspacing="0" width="100%">
