--- a/src/apps/copo_read_submission/templates/copo/copo_read.html
+++ b/src/apps/copo_read_submission/templates/copo/copo_read.html
@@ -160,17 +160,13 @@
 <!-- read_table -->
 <div
   id="component_table_loader"
-  class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"
-  data-copo-tour-id="read_table"
-></div>
-<!-- div used by the quick tour agent -->
+  class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"></div>
 <div class="table-parent-div">
   <table
     id="read_table"
     class="ui celled table hover copo-noborders-table"
     cellspacing="0"
-    width="100%"
-  ></table>
+    width="100%"></table>
 </div>
 
 <div id="data" style="display: none"></div>
@@ -178,6 +174,12 @@
 {% endblock %}
 
 {% block help_section %} {% endblock %}
+
+{% block sidebar_custom_section %}
+<!-- Reads legend -->
+<div class="component-legend" data-tour-id="component_legend" 
+  data-legend="data_status"></div>
+{% endblock sidebar_custom_section %}
 
 {% block component_info%}
 <div
