--- a/src/apps/copo_sample/templates/copo/copo_general_sample.html
+++ b/src/apps/copo_sample/templates/copo/copo_general_sample.html
@@ -152,10 +152,7 @@
 <!-- read_table -->
 <div
   id="component_table_loader"
-  class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"
-  data-copo-tour-id="sample_table"
-></div>
-<!-- div used by the quick tour agent -->
+  class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"></div>
 <div class="table-parent-div">
   <table
     id="sample_table"
@@ -170,6 +167,12 @@
 {% endblock %}
 
 {% block help_section %} {% endblock %}
+
+{% block sidebar_custom_section %}
+  <!-- General sample legend -->
+<div class="component-legend" data-tour-id="component_legend" 
+  data-legend="data_status"></div>
+{% endblock sidebar_custom_section %}
 
 {% block component_info%}
 <div
