--- a/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
+++ b/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
@@ -95,8 +95,7 @@
     </div>
 
     <!-- publication_table -->
-    <div id="component_table_loader" class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"
-         data-copo-tour-id="assembly_table"></div> <!-- div used by the quick tour agent -->
+    <div id="component_table_loader" class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"></div>
     <div class="table-parent-div">
         <table id="assembly_table" class="ui celled table hover copo-noborders-table"
                cellspacing="0" width="100%">
@@ -108,6 +107,11 @@
 {% block help_section %}
 {% endblock %}
 
+{% block sidebar_custom_section %}
+<!-- Assembly legend -->
+<div class="component-legend" data-tour-id="component_legend" 
+data-legend="data_status"></div>
+{% endblock sidebar_custom_section %}
 
 {% block component_info %}
     <div style="display:none; margin-top: 30px; " id="assembly_info" class="alert alert-info"
