--- a/src/apps/copo_core/templates/copo/nav_authenticated.html
+++ b/src/apps/copo_core/templates/copo/nav_authenticated.html
@@ -24,25 +24,23 @@
         {% endif %}
 
         <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown" title="Notifications">
+            <li class="dropdown" title="Notifications" data-tour-id="notifications_icon">
                 <a data-container="body" title="Current Tasks"
                    data-placement="bottom" id="bell_notification"
                    aria-label="View current tasks" role="button">
-                    <span><i class="fa fa-bell" aria-hidden="true"></i></span>
+                    <i class="fa fa-bell" aria-hidden="true"></i>
                 </a>
             </li>
-            <li class="dropdown" title="Home">
+            <li class="dropdown" title="Home" data-tour-id="home_icon">
                 <a href="/" target="_parent" aria-label="Home">
-                    <span data-copo-tour-id="home_button">
-                        <i class="fa fa-home" aria-hidden="true"></i>
-                    </span>
+                    <i class="fa fa-home" aria-hidden="true"></i>
                 </a>
             </li>
-            <li class="dropdown" title="Analytics">
+            <li class="dropdown" title="Analytics" data-tour-id="analytics_icon">
                 <a id="analyticsDropdown" href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
                     aria-expanded="false">
                    <i class="fa fa-chart-line" aria-hidden="true"></i>
-                   <span class="caret"></span>
+                    <span class="caret"></span>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="analyticsDropdown">
                         <li>
                             <a href="/copo/tol_dashboard/stats" target="_parent"
@@ -82,18 +80,16 @@
                     </ul>
                 </a>
             </li>
-            <li class="dropdown" title="News">
+            <li class="dropdown" title="News" data-tour-id="news_icon">
                 <a href="/news" target="_parent" aria-label="News">
-                    <span data-copo-tour-id="news_button">
-                        <i class="fa fa-newspaper" aria-hidden="true"></i>
-                    </span>
+                    <i class="fa fa-newspaper" aria-hidden="true"></i>
                 </a>
             </li>
-            <li class="dropdown" title="Help">
+            <li class="dropdown" title="Help" data-tour-id="help_icon">
                 <a id="helpDropdown" href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
                     aria-expanded="false">
                    <i class="fa fa-question-circle" aria-hidden="true"></i>
-                   <span class="caret"></span>
+                    <span class="caret"></span>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="helpDropdown">
                         <li class="dropdown" title="View blank manifests or checklists">
                             <a href="/manifests/index" target="_parent"
@@ -107,7 +103,7 @@
                         <li class="dropdown" title="Documentation">
                             <a id="copo-documentation" href="https://copo-docs.readthedocs.io/en/latest/" 
                                target="_blank" aria-label="Documentation">
-                                <span data-copo-tour-id="documentation_button">
+                                <span>
                                     <i class="fa fa-book" aria-hidden="true"></i>
                                     <span class="icon_text">Documentation</span>
                                 </span>
@@ -115,7 +111,7 @@
                         </li>
                         <li class="dropdown" title="Contact COPO">
                             <a href="/contact" target="_parent" aria-label="Contact COPO">
-                                <span data-copo-tour-id="contact_button">
+                                <span>
                                         <i class="fa fa-envelope" aria-hidden="true"></i>
                                         <span class="icon_text">Contact Us</span>
                                 </span>
@@ -124,21 +120,18 @@
                     </ul>
                 </a>
             </li>
-            <li class="dropdown" title="About COPO">
+            <li class="dropdown" title="About COPO" data-tour-id="about_icon">
                 <a href="/about" target="_parent" aria-label="About COPO">
-                    <span data-copo-tour-id="about_button">
-                        <i class="fa fa-info-circle" style="font-size: 17px;" aria-hidden="true"></i>
-                    </span>
+                    <i class="fa fa-info-circle" style="font-size: 17px;" aria-hidden="true"></i>
                 </a>
             </li>
-            <li class="dropdown" title="Settings">
+            <li class="dropdown" title="Settings" data-tour-id="settings_icon">
                 <a id="settingsDropdown" href="#" class="dropdown-toggle " data-toggle="dropdown" 
                    role="button" aria-haspopup="true" aria-expanded="false">
                     {% if user.is_authenticated %}
                         <i class="fa fa-gear" aria-hidden="true"></i>
-                        <span data-copo-tour-id="global_user_authenticated_button">{{ user }}
-                            <span class="caret"></span>
-                        </span>
+                        <span>{{ user }}</span>
+                        <span class="caret"></span>
                     {% else %}
                         <i class="fa fa-sign-in-alt copo-header-icons" aria-hidden="true">&nbsp;
                             <span class="caret"></span>
