--- a/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
+++ b/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
@@ -144,7 +144,7 @@ data-backdrop="static" data-keyboard="false">
                 aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Upload a completed manifest for: <span style="color:white;font-size:20px;" id="span_checklist"></span> </h4>
     </div>
-    <div class="modal-body" style="width: 100%">
+    <div class="modal-body" style="width: 100%; padding-bottom: 0;">
             <div class="col-lg-12 col-md-12 col-sm-12">
 
               <input id="file" type="file" style="display:none"/>
@@ -179,7 +179,7 @@ data-backdrop="static" data-keyboard="false">
 
     </ul>
     
-    <div class="tab-content" style="padding:30px" id="singlecell-tab-content">
+    <div class="tab-content" style="padding:30px 30px 10px 30px;" id="singlecell-tab-content">
       <!--div class="tab-pane fade" id="study">
           <table id="singlecell_parse_table_study" class="table table-striped table-bordered">
               <thead></thead>
@@ -203,10 +203,7 @@ data-backdrop="static" data-keyboard="false">
 
 <div
   id="component_table_loader"
-  class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"
-  data-copo-tour-id="{{ui_component}}_table"
-></div>
-<!-- div used by the quick tour agent -->
+  class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"></div>
 
 <ul class="nav nav-tabs" id="singlecell_data_tabs" >
   <!--li >
@@ -234,6 +231,12 @@ data-backdrop="static" data-keyboard="false">
 {% endblock %}
 
 {% block help_section %} {% endblock %}
+
+{% block sidebar_custom_section %}
+<!-- Single-cell legend -->
+<div class="component-legend" data-tour-id="component_legend" 
+  data-legend="data_status"></div>
+{% endblock sidebar_custom_section %}
 
 {% block component_info%}
 <div
