Adjust modals on Files page and made minor front-end fixes
- Auto hide/show instructions in 'Move data' modal
- Remove component value on 'Tree of Life (ToL) Inspection' page
- Comment out console output in 'Group' page JS
- Format a line on 'Sequence annotation' page

--- a/src/apps/copo_file/static/copo/css/copo_files.css
+++ b/src/apps/copo_file/static/copo/css/copo_files.css
@@ -7,3 +7,16 @@
     background-image: -webkit-linear-gradient(top, #fcf8e3 0%, #f8efc0 100%);
     border-color: #f5e79e;
 }
+
+#presigned_url_modal .modal-dialog,
+#uploadModal .modal-dialog {
+    width: 600px;
+}
+
+#command_panel {
+    display: none;
+}
+
+#url_upload_controls li {
+    margin-bottom: 10px;
+}
