--- a/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect.html
+++ b/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect.html
@@ -23,7 +23,7 @@
     {% csrf_token %}
     <div hidden id="hidden_attrs">
         <!-- hidden attributes  -->
-        <input type="hidden" id="nav_component_name" value="sample"/>
+        <input type="hidden" id="nav_component_name" value=""/>
         <input type="hidden" id="profile_id" value="None"/>
         <input type="hidden" id="profile_title" value="None"/>
 
