fix: compressor.exceptions.UncompressableFileError
- sass.scss is added by gitignore so cannot be visible in project. It is unused so it is commented.

--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -137,9 +137,9 @@
     {% block stylesheet_block %}{% endblock %}
 
     <!-- SASS styles -->
-    {% compress css %}
+    <!-- {% compress css %}
         <link rel="stylesheet" type="text/scss" href="{% static 'copo/css/ui/sass.scss' %}"/>
-    {% endcompress %}
+    {% endcompress %} -->
 
     <script>
         $(document).ready(function () {
