Revised Data status legend

--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -124,18 +124,18 @@
         <h4 class="component-legend-title">Data status & progress</h4>
         <ul class="component-legend-group">
             <li class="component-legend-group-item">
-                <i class="fa fa-info-circle component-legend-info-icon" title="Pending status means that the data is not yet submitted."></i>
+                <i class="fa fa-info-circle component-legend-info-icon" title="Yellow highlight means that the data is not yet submitted and no accessions have been assigned."></i>
                 <span class="component-legend-text">Pending submission</span>
                 <span class="fa fa-circle component-legend-circle" style="color:#ffd700"></span>
             </li>
             <li class="component-legend-group-item">
                 <i class="fa fa-info-circle component-legend-info-icon" 
-                title="Error status means that there was a problem with the data submission.&#10;&#10;Refer to the 'STATUS' and 'ENA FILE PROCESSING STATUS' columns in the table for more information."></i>
+                title="Red highlight means that there was a problem with the data submission or the data requires attention before it can be successfully submitted.&#10;&#10;Refer to the 'STATUS' and 'ENA FILE PROCESSING STATUS' columns in the table for more information."></i>
                 <span class="component-legend-text">Error during submission</span>
                  <span class="fa fa-circle component-legend-circle" style="color:#f88080"></span>
             </li>
             <li class="component-legend-group-item">
-                <i class="fa fa-info-circle component-legend-info-icon" title="Green status means that the data has been successfully submitted."> </i>
+                <i class="fa fa-info-circle component-legend-info-icon" title="Green highlight means that the data has been successfully submitted and no further action is needed."> </i>
                 <span class="component-legend-text">Successful submission</span>
                  <span class="fa fa-circle component-legend-circle" style="color:#d9e8d9"></span>
             </li>
